--- a/printmenu.html
+++ b/printmenu.html
@@ -15,7 +15,117 @@
     <link rel="stylesheet" href="css/printmenu.css">
 
 </head>
-
+<div class="container">
+    <div class="card-deck mb-3">
+        <div class="card mb-4">
+            <div class="card-header">
+                <h4 class="cikk-head">Meleg Italok</h4>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Eszpresszó kávé</p>
+                <p class="ar">350</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Hosszú kávé</p>
+                <p class="ar">370</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Macchiato</p>
+                <p class="ar">390</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Cappuccino</p>
+                <p class="ar">430</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Tejeskávé</p>
+                <p class="ar">430</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Latte Macchiato</p>
+                <p class="ar">510</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Melange</p>
+                <p class="ar">550</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Óriás tejeskávé</p>
+                <p class="ar">570</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Forró kakaó tejszínhabbal</p>
+                <p class="ar">450</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Tea</p>
+                <p class="magyarazat">(fekete, gyümölcs, zöld, gyógytea)</p>
+                <p class="ar">350</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">+ Tejszínhab</p>
+                <p class="ar">50</p>
+            </div>
+        </div>
+        <div class="card mb-4">
+            <div class="card-header">
+                <h4 class="cikk-head">Meleg Italok</h4>
+            </div>
+            
+        </div>
+        <div class="card mb-4">
+            <div class="card-header">
+                <h4 class="cikk-head">Meleg Italok</h4>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Eszpresszó kávé</p>
+                <p class="ar">350</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Hosszú kávé</p>
+                <p class="ar">370</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Macchiato</p>
+                <p class="ar">390</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Cappuccino</p>
+                <p class="ar">430</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Tejeskávé</p>
+                <p class="ar">430</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Latte Macchiato</p>
+                <p class="ar">510</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Melange</p>
+                <p class="ar">550</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Óriás tejeskávé</p>
+                <p class="ar">570</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Forró kakaó tejszínhabbal</p>
+                <p class="ar">450</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">Tea</p>
+                <p class="magyarazat">(fekete, gyümölcs, zöld, gyógytea)</p>
+                <p class="ar">350</p>
+            </div>
+            <div class="card-body">
+                <p class="tetel">+ Tejszínhab</p>
+                <p class="ar">50</p>
+            </div>
+        </div>
+        
+    </div>
+</div>
 <body>
 
 </body>
